Adjusted RaceBoard.css to avoid wrapping in series and fleet label

--- a/java/com.sap.sailing.gwt.ui/RaceBoard.css
+++ b/java/com.sap.sailing.gwt.ui/RaceBoard.css
@@ -692,6 +692,7 @@ img.openColumn {
 .compactHeader .RegattaRaceInformation-Header .RaceSeriesAndFleet-Label {
     display: block;
     margin-top: 5px;
+    white-space: nowrap;
 }
 .compactHeader .RegattaAndRaceTime-Header {
     top: 11px;
